Update libRocket to get input from Quake instead of SDL2

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -722,6 +722,7 @@ set( ROCKET_CLIENTLIST
   ${MOUNT_DIR}/engine/client/rocket_datagrid.cpp
   ${MOUNT_DIR}/engine/client/rocket_element.cpp
   ${MOUNT_DIR}/engine/client/rocket_events.cpp
+  ${MOUNT_DIR}/engine/client/rocket_keys.cpp
   ${MOUNT_DIR}/engine/client/rocket_hud.cpp
 
   ${MOUNT_DIR}/engine/client/rocket.cpp
