Tools: introduce back the compilation of lcc/q3asm/...

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -30,6 +30,7 @@ option( BUILD_CLIENT "Build Daemon client" 1 )
 option( BUILD_SERVER "Build Daemonded server" 1 )
 option( BUILD_GAME_NATIVE "Build native game logic " 0 )
 option( BUILD_GAME_NACL "Build NaCl game logic" 0 )
+option( BUILD_GAME_QVM "Build QVM game logic" 0 )
 option( BUILD_TTY_CLIENT "Build Daemon headless client" 1 )
 cmake_dependent_option( BUILD_OLD_RENDERER "Build old renderer library" 1 BUILD_CLIENT 0 )
 cmake_dependent_option( BUILD_NEW_RENDERER "Build new renderer library" 1 BUILD_CLIENT 0 )
@@ -263,6 +264,8 @@ set( OBJ_DIR ${CMAKE_BINARY_DIR}/CMakeFiles )
 set( ENGINE_DIR ${MOUNT_DIR}/engine )
 set( SHARED_DIR ${MOUNT_DIR}/shared )
 set( GAMELOGIC_DIR ${MOUNT_DIR}/gamelogic )
+set( TOOLS_DIR ${MOUNT_DIR}/tools )
+set( LCC_DIR ${TOOLS_DIR}/lcc )
 set( LIB_DIR ${MOUNT_DIR}/libs )
 if( CMAKE_HOST_WIN32 )
   set( PNACL_TOOLCHAIN ${NACL_SDK_PATH}/toolchain/win_x86_pnacl/newlib/bin )
@@ -1254,6 +1257,9 @@ function( GAMEMODULE )
     )
   endif()
 
+  if( BUILD_GAME_QVM )
+    add_subdirectory( ${LCC_DIR} ${CMAKE_BINARY_DIR}/lcc )
+  endif()
 endfunction()
 
 GAMEMODULE( NAME game
