Fix native libraries

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1194,11 +1194,11 @@ function( GAMEMODULE )
   if( BUILD_GAME_NATIVE )
     # HACK: Compile shared files as C
     set_source_files_properties( ${SHAREDLIST_HACK} PROPERTIES LANGUAGE C )
-    add_library( ${GAMEMODULE_NAME} MODULE ${GAMEMODULE_FILES} ${SHAREDLIST_HACK} ${GAMEMODULE_NATIVE_FILES} ${NACLLIST_NATIVE} )
+    add_library( ${GAMEMODULE_NAME} SHARED ${GAMEMODULE_FILES} ${SHAREDLIST_HACK} ${GAMEMODULE_NATIVE_FILES} )
     target_link_libraries( ${GAMEMODULE_NAME} ${LIBS_BASE} )
     set_target_properties( ${GAMEMODULE_NAME} PROPERTIES
-      OUTPUT_NAME ${GAMEMODULE_NAME}
-      RUNTIME_OUTPUT_DIRECTORY ${GAMEMODULE_OUTPUT_DIR}
+      PREFIX ""
+      LIBRARY_OUTPUT_DIRECTORY ${GAMEMODULE_OUTPUT_DIR}
       COMPILE_DEFINITIONS ${GAMEMODULE_COMPILE_DEF}
     )
   endif()
