Don't make tty client depend on SDL

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -977,7 +977,7 @@ if( NOT ENABLE_QVM_COMPAT )
 endif()
 
 # SDL, required for all targets on win32 because of iconv
-if( BUILD_CLIENT OR BUILD_NEW_RENDERER OR BUILD_OLD_RENDERER OR BUILD_TTY_CLIENT OR ( WIN32 AND BUILD_SERVER ) )
+if( BUILD_CLIENT OR BUILD_NEW_RENDERER OR BUILD_OLD_RENDERER OR ( WIN32 AND (BUILD_TTY_CLIENT OR BUILD_SERVER ) ) )
   if( USE_SDL2 )
     find_package( SDL2 REQUIRED )
     include_directories( ${SDL2_INCLUDE_DIR} )
