Small fixes for Windows build

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -935,24 +935,28 @@ set_source_files_properties( ${EVERYTHING_C} PROPERTIES LANGUAGE CXX )
 # Libraries
 ################################################################################
 
-# Set up paths for external dependencies
+# Add paths for external dependencies
 if( WIN32 AND NOT MSVC )
   if( ARCH STREQUAL "x86_64" )
-    set( CMAKE_INCLUDE_PATH ${CMAKE_INCLUDE_PATH} ${DEPS_DIR}/mingw64 ${DEPS_DIR}/mingw64/include )
-    set( CMAKE_LIBRARY_PATH ${CMAKE_LIBRARY_PATH} ${DEPS_DIR}/mingw64/lib )
+    set( CMAKE_FIND_ROOT_PATH ${DEPS_DIR}/mingw64 ${CMAKE_FIND_ROOT_PATH} )
+    set( CMAKE_INCLUDE_PATH ${DEPS_DIR}/mingw64 ${DEPS_DIR}/mingw64/include ${CMAKE_INCLUDE_PATH} )
+    set( CMAKE_LIBRARY_PATH ${DEPS_DIR}/mingw64/lib ${CMAKE_LIBRARY_PATH} )
   else()
-    set( CMAKE_INCLUDE_PATH ${CMAKE_INCLUDE_PATH} ${DEPS_DIR}/mingw32 ${DEPS_DIR}/mingw32/include )
-    set( CMAKE_LIBRARY_PATH ${CMAKE_LIBRARY_PATH} ${DEPS_DIR}/mingw32/lib )
+    set( CMAKE_FIND_ROOT_PATH ${DEPS_DIR}/mingw32 ${CMAKE_FIND_ROOT_PATH} )
+    set( CMAKE_INCLUDE_PATH ${DEPS_DIR}/mingw32 ${DEPS_DIR}/mingw32/include ${CMAKE_INCLUDE_PATH} )
+    set( CMAKE_LIBRARY_PATH ${DEPS_DIR}/mingw32/lib ${CMAKE_LIBRARY_PATH} )
   endif()
 elseif( APPLE )
   if( ARCH STREQUAL "x86_64" )
-    set( CMAKE_INCLUDE_PATH ${CMAKE_INCLUDE_PATH} ${DEPS_DIR}/macosx10.8_64 ${DEPS_DIR}/macosx10.8_64/include )
-    set( CMAKE_FRAMEWORK_PATH ${CMAKE_FRAMEWORK_PATH} ${DEPS_DIR}/macosx10.8_64 )
-    set( CMAKE_LIBRARY_PATH ${CMAKE_LIBRARY_PATH} ${DEPS_DIR}/macosx10.8_64/lib )
+    set( CMAKE_FIND_ROOT_PATH ${DEPS_DIR}/macosx10.8_64 ${CMAKE_FIND_ROOT_PATH} )
+    set( CMAKE_INCLUDE_PATH ${DEPS_DIR}/macosx10.8_64 ${DEPS_DIR}/macosx10.8_64/include ${CMAKE_INCLUDE_PATH} )
+    set( CMAKE_FRAMEWORK_PATH ${DEPS_DIR}/macosx10.8_64 ${CMAKE_FRAMEWORK_PATH} )
+    set( CMAKE_LIBRARY_PATH ${DEPS_DIR}/macosx10.8_64/lib ${CMAKE_LIBRARY_PATH} )
   else()
-    set( CMAKE_INCLUDE_PATH ${CMAKE_INCLUDE_PATH} ${DEPS_DIR}/macosx10.7_32 ${DEPS_DIR}/macosx10.7_32/include )
-    set( CMAKE_FRAMEWORK_PATH ${CMAKE_FRAMEWORK_PATH} ${DEPS_DIR}/macosx10.7_32 )
-    set( CMAKE_LIBRARY_PATH ${CMAKE_LIBRARY_PATH} ${DEPS_DIR}/macosx10.7_32/lib )
+    set( CMAKE_FIND_ROOT_PATH ${DEPS_DIR}/macosx10.7_32 ${CMAKE_FIND_ROOT_PATH} )
+    set( CMAKE_INCLUDE_PATH ${DEPS_DIR}/macosx10.7_32 ${DEPS_DIR}/macosx10.7_32/include ${CMAKE_INCLUDE_PATH} )
+    set( CMAKE_FRAMEWORK_PATH ${DEPS_DIR}/macosx10.7_32 ${CMAKE_FRAMEWORK_PATH} )
+    set( CMAKE_LIBRARY_PATH ${DEPS_DIR}/macosx10.7_32/lib ${CMAKE_LIBRARY_PATH} )
   endif()
 endif()
 
