Lots of build-related fixes: - Removed CPack since it wasn't used - Added CMake toolchain file to cross-compile for 32-bit Linux - Added script to create a Mac application bundle - Removed "lib" prefix from Linux/Mac renderer modules - Set minimum required OSX version to 10.7 for both 32-bit and 64-bit

--- a/.gitignore
+++ b/.gitignore
@@ -2,29 +2,22 @@
 # which already committed files are matched against these rules
 
 *~
-build/*
-lcc/*
+lcc
 *.DS_Store
 CMakeCache.txt
-CMakeLists.txt.user
 CMakeFiles
-CPackConfig.cmake
-CPackSourceConfig.cmake
 Makefile
 cmake_install.cmake
 daemon*
 download-pk3.sh
-librendererGL*
+rendererGL*
 main/cgame.*
 main/game.*
 main/ui.*
 main/vm
 main/*.pk3
-libglcpp-library.a
-libglsl_optimizer.a
-libmesa.a
-build-32/*
-build-64/*
+Release
+Debug
 *.vcxproj.user
 *.kdev4
 
@@ -39,7 +32,7 @@ build-64/*
 #ignore eclipse cdt project files
 .project
 .cproject
-.settings/
+.settings
 
 #never ignore these in subdirectories by accident
 !.gitattributes
