--- a/macosx/Info.plist
+++ b/macosx/Info.plist
@@ -5,7 +5,7 @@
 	<key>CFBundleDisplayName</key>
 	<string>Unvanquished</string>
 	<key>CFBundleExecutable</key>
-	<string>../Resources/Unvanquished/daemon</string>
+	<string>unvanquished.sh</string>
 	<key>CFBundleIconFile</key>
 	<string>Unvanquished.icns</string>
 	<key>CFBundleIdentifier</key>
@@ -30,6 +30,6 @@
 		</dict>
 	</array>
 	<key>CFBundleVersion</key>
-	<string>0.6</string>
+	<string>0.21</string>
 </dict>
 </plist>
